--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:background="#0000ff"
         android:id="@+id/fl_title"
         android:layout_width="match_parent"
         android:layout_height="44dp"
